# Parallel-MST

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  load_modules.sh  plot_results.py  run_hpc.sh  run_hpc_range.sh  run_mpi.sh
.cache/clangd/index/: main.c.AD3FBB7E52B38BBD.idx  serial_mst.h.D9D8CB8AD4B27080.idx
dataset/: README.md  big_tree.txt  main-russian-cities.txt  small.txt  small2.txt  small3.txt
dataset/original/: big_tree.graphml  main-russian-cities.graphml  small3.graphml
executables/: generate_graphs.c  main.c
include/: common.h  mpi_mst.h  serial_mst.h
include/mpi/: mpi_mst.h  mpi_types.h
include/tools/: graph_generator.h  graph_parser.h  logger.h
scripts/: parse_xml.py
src/: common.c  main.c  mpi_mst.c  mpi_types.c  serial_mst.c
src/mpi/: mpi_mst.c  mpi_types.c
src/tools/: graph_generator.c  graph_parser.c  logger.c
tests/: test_mst.c
